benpaul is awesome and checked out some fixes...actually delete items..size of font on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ and (max-device-width : 480px) {
 		width: 100%;
 		height: 50px;
 		line-height: 40pt;
-		font-size: 14px;
+		font-size: 17px;
 	}
 	.deleteicon, .undoicon, .checkicon {
 		height: 50px;
@@ -195,6 +195,7 @@ body {
 		height: 50px;
 		line-height: 40pt;
 		font-size: 14px;
+		text-align: center;
 	}
 	.deleteicon, .undoicon, .checkicon {
 		height: 50px;
